investment archive: server build
